enable automatic link recognition in attributes by handling URIs instead of URLs special